# RAG_PRIVACY

./: .gitignore  Makefile  README.md  SETUP_BRIEF.txt  SETUP_TASKS.md  TESTING_CHECKLIST.md  app.py  pyproject.toml  pytest.ini
.claude/: BUILD_PLAN.md  CLAUDE.md  CONTRACTS.md  INDEX.md  README.md  data-engineer.md  index-engineer.md  rag-engineer.md  ui-engineer.md
.claude/agents/: docs-engineer.md  eval-engineer.md  infra-engineer.md  observability-engineer.md  red-engineer.md  vector-engineer.md
.github/workflows/: ci.yml
api/: Dockerfile  authorizer.py  handler.py
docs/: CONTRACTS.md  UPGRADE_PLAN.md
docs/memory/: 00-decisions.md  01-data.md  02-retrieval.md  03-generation.md  04-ui.md  05-eval.md  06-observability.md  07-infra.md  08-red.md  INDEX.md
eval/: __init__.py  gate.py  golden.py  metrics.py  thresholds.yaml
eval/baselines/: README.md  baseline_v1.json
eval/golden/: MANIFEST.md  __init__.py  build_golden.py  golden_v1.jsonl
eval/promptfoo/: promptfooconfig.yaml  provider.py
eval/ragas/: __init__.py  run_ragas.py
infra/: SETUP_NOTES.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infra/sql/: 001_init.sql
src/policylens/: __init__.py  config.py  generate.py  index.py  ingest.py  migrate_pgvector.py  observability.py  pgvector.py  retrieve.py
tests/: smoke.py  test_authorizer.py  test_config_v2.py  test_contracts.py  test_eval.py  test_generate.py  test_handler.py  test_ingest.py  test_observability.py  test_pgvector.py  test_retrieval.py
tests/fixtures/: chunks_sample.jsonl
tests/red/: test_red_authorizer.py  (+4 more)
