[project]
name = "policylens"
version = "0.1.0"
description = "Privacy-policy RAG with clause-level citations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=2.7.0,<3.0.0",
    "torch>=2.2.0,<2.3.0",
    "streamlit>=1.35.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "requests>=2.31.0",
    "tqdm>=4.66.0",
    "pyright>=1.1.360",
    "ruff>=0.5.0",
    "pytest>=8.0.0",
    "numpy>=1.24,<2.0",
]

[project.scripts]
policylens-index = "policylens.index:cli"

[tool.uv]
override-dependencies = [
    # onnxruntime 1.25+ dropped macOS x86_64 wheels; pin to last good version
    "onnxruntime==1.23.2 ; sys_platform == 'darwin' and platform_machine == 'x86_64'",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
exclude = ["data", ".venv", "**/__pycache__"]
venvPath = "."
venv = ".venv"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/policylens"]
